fix:修复gradle build过程的大量警告